syntax = "proto3";

package proto;

service name {
    rpc RegisterDisks(RegisterDisksRequest) returns (RegisterDisksReply);
    rpc FetchDisks(FetchDisksRequest) returns (FetchDisksReply);
}

message RegisterDisksRequest {
    repeated DiskInfo disks = 1;
}

message RegisterDisksReply {}

message FetchDisksRequest {}

message FetchDisksReply {
    repeated DiskInfo disks = 1;
}

message DiskInfo {
    string name = 1;
    string remote = 2;
}